<resources>
    <string name="app_name">Login_App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imgViewPerson_Content">Imagen de usuario</string>
    <string name="txtViewUserLogin_Text">¿Ya tienes una cuenta?</string>
    <string name="inputEmail_Hint">Correo electónico</string>
    <string name="inputPassword_Hint">Contraseña</string>
    <string name="loginButton_Text">Iniciar Sesión</string>
    <string name="forgotPassword_Text">¿Olvidó su contraseña?</string>
    <string name="googleImage_Content">Inicio de sesión con Google</string>
    <string name="facebookImage_Content">Inicio de sesión con Facebook</string>
    <string name="newUser_Text">Nuevo Usuario</string>
</resources>